feat: changing the color of information depending on the background

--- a/src/styles.css
+++ b/src/styles.css
@@ -124,6 +124,7 @@ body {
   top: calc(50vh - var(--fontSizeInfo) / 2);
   opacity: 0.4;
   text-align: center;
+  color: white;
 }
 
 @keyframes pulse-of-space {
@@ -137,8 +138,7 @@ body {
   margin: auto;
   width: 9.5em;
   line-height: 1.5em;
-  border: 0.1em solid var(--Shadow);
-  color: var(--Shadow);
+  border: 0.1em solid;
   border-radius: 0.75em;
 }
 
