--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,7 @@ body {
   background-color: var(--Shadow);
   opacity: 0.4;
   cursor: pointer;
+  z-index: 2;
 }
 
 .post-4 {           
@@ -76,6 +77,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  z-index: 1;
 }
 
 .column h1 {
@@ -125,6 +127,7 @@ body {
   opacity: 0.4;
   text-align: center;
   color: white;
+  z-index: 2;
 }
 
 @keyframes pulse-of-space {
@@ -160,4 +163,5 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 3rem;
+  z-index: 1;
 }
